[gd_scene load_steps=6 format=3 uid="uid://dsc0aspx5s2lg"]

[ext_resource type="Script" path="res://scripts/leaderboard.gd" id="1_rp6iw"]
[ext_resource type="PackedScene" uid="uid://cslpku03a7ygu" path="res://scenes/board_entry.tscn" id="2_60fs7"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_6rk8b"]
color = Color(1, 1, 1, 1)
thickness = 3

[sub_resource type="InputEventKey" id="InputEventKey_i4qxj"]
device = -1
keycode = 4194309

[sub_resource type="Shortcut" id="Shortcut_e8sja"]
events = [SubResource("InputEventKey_i4qxj")]

[node name="Leaderboard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rp6iw")
board_entry_scene = ExtResource("2_60fs7")

[node name="ScorePanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -217.0
offset_top = -283.0
offset_right = 217.0
offset_bottom = 219.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxLine_6rk8b")

[node name="PlayerList" type="VBoxContainer" parent="ScorePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 14.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -46.0
offset_top = -88.0
offset_right = 46.0
offset_bottom = -57.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 30
shortcut = SubResource("Shortcut_e8sja")
text = "TRY AGAIN"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
